# samurai-jack

./: .gitignore  ARCHITECTURE.md  BUILD_FIX_SUMMARY.md  BUILD_STATUS.txt  CONTRIBUTING.md  DEVELOPMENT.md  ENHANCEMENT_SUMMARY.md  README.md  detekt.yml  gradle.properties  settings.gradle.kts  setup.sh
.githooks/: pre-commit
.github/workflows/: quality.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: samurai_model.mtl  samurai_warrior.mtl
app/src/main/cpp/: CMakeLists.txt  game_main.cpp
app/src/main/java/com/thigazhini_labs/samuraijack/: MainActivity.kt
app/src/main/java/com/thigazhini_labs/samuraijack/audio/: SoundManager.kt
app/src/main/java/com/thigazhini_labs/samuraijack/engine/: GLRenderer.kt  Math3D.kt  Shader.kt
app/src/main/java/com/thigazhini_labs/samuraijack/models/: Models3D.kt
app/src/main/java/com/thigazhini_labs/samuraijack/stages/: Stages.kt
app/src/main/java/com/thigazhini_labs/samuraijack/ui/: GameUI.kt
app/src/main/java/com/thigazhini_labs/samuraijack/ui/components/: CommonComponents.kt
app/src/main/java/com/thigazhini_labs/samuraijack/ui/theme/: DesignTokens.kt  Theme.kt  Typography.kt
app/src/main/res/raw/: soundtrack.m4a
app/src/main/res/values/: strings.xml
unity-assets/Scripts/Combat/: IPlayerState.cs  PlayerController.cs  PlayerStates.cs
unity-assets/Scripts/Core/: AssetLoadingManager.cs  GameManager.cs  ObjectPool.cs  VFXManager.cs
unity-assets/Scripts/Input/: TouchInputManager.cs
